--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.13.3
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+colorama==0.4.6
 h11==0.14.0
 idna==3.10
 outcome==1.3.0.post0
