--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ python-dotenv==1.0.1
 pywin32-ctypes==0.2.3
 requests==2.32.3
 selenium==4.29.0
+setuptools==76.0.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
